# GDQT

./: .gitignore  CMakeLists.txt  README.md  gdd_parser.cpp  gdd_parser.h  gddparser.cpp  gddparser.h  jsonparser.cpp  jsonparser.h  main.cpp  qst_parser.cpp  qst_parser.h  questtrackerwindow.cpp  questtrackerwindow.h  questtrackerwindow.ui  rc.qrc  settings.cpp  settings.h  types.h  utils.cpp  utils.h  version.h
resources/: quests.json
